corpus/text.txt
===
Text
===
This is some text
---
(source_file
	(body
		(content
			(text))))

===
Text with curly braces
===
This is some text with { curly braces }.
---
(source_file
	(body
		(content
			(text))))
